macOS: link against CoreFoundation and CoreServices.
This is now needed...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1126,7 +1126,10 @@ if(LLVMCLANG_BUILD_SHARED_LIB)
   add_dependencies(LLVMClang ${LLVMCLANG_LIBS})
   if(WIN32)
     target_link_libraries(LLVMClang version)
-  elseif(NOT APPLE)
+  elseif(APPLE)
+    target_link_libraries(LLVMClang "-framework CoreFoundation"
+                                    "-framework CoreServices")
+  else()
     target_link_libraries(LLVMClang dl)
   endif()
   if(HAVE_LIBPTHREAD)
