Make sure that we can find all the .inc files.
It used to be fine before, but now we need to add those include directories...!?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1256,11 +1256,11 @@ if (LLVM_INCLUDE_BENCHMARKS)
   set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Don't install benchmark" FORCE)
   set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "Don't download dependencies" FORCE)
   set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "Disable Google Test in benchmark" FORCE)
-  set(BENCHMARK_ENABLE_WERROR ${LLVM_ENABLE_WERROR} CACHE BOOL 
+  set(BENCHMARK_ENABLE_WERROR ${LLVM_ENABLE_WERROR} CACHE BOOL
     "Handle -Werror for Google Benchmark based on LLVM_ENABLE_WERROR" FORCE)
   # Since LLVM requires C++11 it is safe to assume that std::regex is available.
   set(HAVE_STD_REGEX ON CACHE BOOL "OK" FORCE)
-  add_subdirectory(${LLVM_THIRD_PARTY_DIR}/benchmark 
+  add_subdirectory(${LLVM_THIRD_PARTY_DIR}/benchmark
     ${CMAKE_CURRENT_BINARY_DIR}/third-party/benchmark)
   add_subdirectory(benchmarks)
 endif()
@@ -1278,7 +1278,26 @@ if(LLVMCLANG_BUILD_SHARED_LIB)
   get_property(LLVMCLANG_COMPILE_DEFINITIONS GLOBAL PROPERTY LLVMCLANG_COMPILE_DEFINITIONS)
   include_directories(${CMAKE_SOURCE_DIR}/include
                       ${CMAKE_SOURCE_DIR}/tools/clang/include
-                      ${LLVMCLANG_INCLUDE_DIRS})
+                      ${LLVMCLANG_INCLUDE_DIRS}
+                      ${CMAKE_BINARY_DIR}/include/llvm/Frontend/OpenACC
+                      ${CMAKE_BINARY_DIR}/include/llvm/Frontend/OpenMP
+                      ${CMAKE_BINARY_DIR}/include/llvm/IR
+                      ${CMAKE_BINARY_DIR}/lib/Target/X86
+                      ${CMAKE_BINARY_DIR}/lib/ToolDrivers/llvm-dlltool
+                      ${CMAKE_BINARY_DIR}/lib/ToolDrivers/llvm-lib
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/AST
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Basic
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Driver
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Parse
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Sema
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Serialization
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/StaticAnalyzer/Checkers
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Tooling
+                      ${CMAKE_BINARY_DIR}/tools/clang/include/clang/Tooling/Syntax
+                      ${CMAKE_BINARY_DIR}/tools/clang/lib/AST
+                      ${CMAKE_BINARY_DIR}/tools/clang/lib/Basic
+                      ${CMAKE_BINARY_DIR}/tools/clang/lib/Sema
+                      ${CMAKE_BINARY_DIR}/tools/llvm-config)
   add_library(LLVMClang SHARED ${LLVMCLANG_SOURCES})
   set_property(TARGET LLVMClang APPEND PROPERTY COMPILE_DEFINITIONS ${LLVMCLANG_COMPILE_DEFINITIONS})
   if(WIN32)
