--- a/tools/clang/CMakeLists.txt
+++ b/tools/clang/CMakeLists.txt
@@ -533,7 +533,9 @@ if(LLVM_ENABLE_MODULES)
 endif()
 
 add_subdirectory(lib)
-add_subdirectory(tools)
+if(CLANG_BUILD_TOOLS)
+  add_subdirectory(tools)
+endif()
 add_subdirectory(runtime)
 
 option(CLANG_BUILD_EXAMPLES "Build CLANG example programs by default." OFF)
